Improve text overflow handling, use nowrap, fix CSS classes naming

--- a/src/demo/Treemap.css
+++ b/src/demo/Treemap.css
@@ -1,10 +1,9 @@
 .treemap__node {
     position: absolute;
-    overflow: hidden;
     border-radius: 2px;
 }
 
-.treemap__node-inner {
+.treemap__node-outer {
     box-sizing: border-box;
     width: 100%;
     height: 100%;
@@ -14,7 +13,7 @@
     border-radius: 2px;
 }
 
-.treemap__node-inner2 {
+.treemap__node-inner {
     box-sizing: border-box;
     width: 100%;
     height: 100%;
@@ -22,4 +21,12 @@
     border-style: solid;
     border-color: rgba(255,255,255,0.5) transparent transparent rgba(255,255,255,0.5);
     border-radius: 2px;
+    overflow: hidden;
+}
+
+.treemap__label {
+    box-sizing: border-box;
+    font-size: 12px;
+    padding-left: 4px;
+    white-space: nowrap;
 }
